<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media_library">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="settings_screen_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
</resources>