<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:paddingTop="14dp"
        android:text="@string/main_screen_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/button_search"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/button_media_library"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_media_library"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:text="@string/button_settings"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />

</LinearLayout>